--- a/portfolio.html
+++ b/portfolio.html
@@ -230,7 +230,7 @@
             </address>
           </li>
           <li class="footer-email-item">
-            <a class="portfolio-footer-email" href="mailto:info@devstudio.com"
+            <a class="portfolio-footer-email" href="mailto:info@example.com"
               >info@devstudio.com</a
             >
           </li>
